--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
                     -2px -2px 0 white, 
                     2px -2px 0 white,  
                     -2px 2px 0 white,  
-                    2px 2px 0 white;   
+                    2px 2px 0 white; 
     --background: #fffbee;
     --background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='%23ec7267' fill-opacity='0.4'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E");
 }
@@ -54,7 +54,7 @@ body {
     text-shadow: var(--text-shadow);
 }
 
-/*INTRO*/
+/*INTRO & CON*/
 .ic-container {
     position: relative;
     text-align: center;
@@ -126,3 +126,80 @@ td {
     background-size: auto;
 }
 
+#noButton {
+    position: absolute;
+    margin-left: 150px;
+    transition: 0.5s;
+}
+
+#yesButton {
+    position: absolute;
+    margin-right: 150px;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+
+.btn {
+    background-color: var(--light);
+    color: var(--text);
+    padding: 5px 32px;
+    text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border: none;
+    border-radius: 12px;
+    transition: background-color 0.3s ease;
+}
+
+.gif-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (max-width: 320px) and (max-height: 568px) {
+    body {
+        height: 100vh;
+    }
+
+    .header_text {
+        font-size: 20px;
+    }
+
+    img {
+        height: 60vh;
+    }
+
+    .btn {
+        padding: 10px 18px;
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 414px) and (max-height: 736px) {
+    body {
+        height: 90vh;
+    }
+
+    .header_text {
+        font-size: 28px;
+    }
+
+    img {
+        height: 60vh;
+    }
+
+    .btn {
+        padding: 15px 25px;
+        font-size: 14px;
+    }
+}
